--- a/includes/style.css
+++ b/includes/style.css
@@ -17,7 +17,12 @@
 .contactForm input, .contactForm textarea {
 	width:100%;
 	padding:15px;
-	background-color:rgba(255,255,255,.6d);
+	background-color:rgba(255,255,255,.6);
+}
+
+section:nth-last-child(1)  {
+	background-image: url(img/zwartevilt.png);
+	background-size: 100%;
 }
 
 section:nth-last-child(1) h1 {
@@ -25,6 +30,7 @@ section:nth-last-child(1) h1 {
 	font-size: 55px;
 	text-shadow: 4px 4px #333;
 }
+
 section:nth-last-child(1) h2 {
 	color:white;
 }
